--- a/Codice/welcomePage.html
+++ b/Codice/welcomePage.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Welcome</title>
 	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="author" content="Matteo Forni">
 	<meta name="date" content="14.09.2018">
 	<meta name="description" content="Primo progetto mod.306">
