Modifica del codice e aggiunta del diario

--- a/Codice/welcomePage.html
+++ b/Codice/welcomePage.html
@@ -15,7 +15,8 @@
 	<div id="welcome">
 		<h1>Benvenuto</h1>
 		<h3>Inserisci i tuoi dati per sapere se hai vinto!</h3>
-		<a href="login.php"><input type="button" name="buttonNext" id="buttonNext" value="Registrati" onclick=""></a>
+		<a href="
+		register.php"><input type="button" name="buttonNext" id="buttonNext" value="Registrati"></a>
 	</div>
 </body>
 </html>
