fix code, fix doc, add doc.pdf

--- a/Codice/welcomePage.html
+++ b/Codice/welcomePage.html
@@ -16,7 +16,7 @@
 		<h1>Benvenuto</h1>
 		<h3>Inserisci i tuoi dati per sapere se hai vinto!</h3>
 		<a href="
-		register.php"><input type="button" name="buttonNext" id="buttonNext" value="Registrati"></a>
+		register.html"><input type="button" name="buttonNext" id="buttonNext" value="Registrati"></a>
 	</div>
 </body>
 </html>
